--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,2 +1,2 @@
 config:
-  info: "main branch,spring-cloud-config/config-dev.yml version=6543643"
+  info: "main branch,spring-cloud-config/config-dev.yml version=0000"
